Finished Final Part 3, last upload with citations

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Notable entries are the explanation of social support where they recorded data f
 the Gallup World Poll with a question asking if you had friends or family that could help you,
 and also both freedom to make life choices and generosity where they also got information from the Gallup
 World Poll. This information can help explain how they exactly calculated these factors that
-have an effect on happiness.</p><h3 id="thank-you-for-reading,-and-be-happy!">Thank you for reading, and Be Happy<!-- -->!</h3></div></div></div></div>
+have an effect on happiness.</p><h2 id="citations">Citations</h2><p>Aché, Mathurin. “World Happiness Report up to 2020.” Kaggle, 30 June 2020, <a href="www.kaggle.com/mathurinache/world-happiness-report?select=2020.csv.">www.kaggle.com/mathurinache/world-happiness-report?select=2020.csv.</a></p><p>Helliwell, John F., et al. “Social Environments for World Happiness.” Social Environments for World Happiness, WHR 2020., 20 Mar. 2020, <a href="worldhappiness.report/ed/2020/social-environments-for-world-happiness/.">worldhappiness.report/ed/2020/social-environments-for-world-happiness/.</a></p><h1 id="thank-you-for-reading,-and-be-happy!">Thank you for reading, and Be Happy<!-- -->!</h1></div></div></div></div>
     <script src="static/idyll_index.js"></script>
   </body>
 </html>
